welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:4: error: not found: value getMondehauteur
    for(y<-0 to getMondehauteur()){
                ^